nav fixed on safari

--- a/styles/style.css
+++ b/styles/style.css
@@ -23,7 +23,9 @@
 
 
 html, body {
-  overflow-x: hidden;
+  overflow: hidden;
+    position: relative;
+    height: 100%;
 }
 
 /* header  */
